# gitlab-mr-commenter

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
examples/: gitlab-ci.yml  python-script.py
gitlab_mr_commenter/: __init__.py  __main__.py
